--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.20.6",
-    "@vis.gl/react-google-maps": "^1.5.2",
     "leaflet": "^1.9.4",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.3",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
