--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primereact": "^10.9.3",
     "react": "^19.0.0-rc.1",
     "react-dom": "^19.0.0-rc.1",
+    "react-hook-form": "^7.54.2",
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
